@@ -1,5 +1,6 @@
 HEAD
 	+ Added explicit check for full name in EBox::Samba::User::create
+	+ Add systemQuota object class when setting user quota
 4.2.1
 	+ Remove External AD mode leftovers in menu when not configured
 4.2
